# orange-county-nc-wells

./: .gitignore  Makefile  README.md  deploy-workflow-template.yml  observablehq.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
docs/: architecture.md
docs/adr/: 0001-use-observable-framework.md
scripts/: fetch_precip.py  ncwater.py  requirements.txt  wells_meta.json
src/: index.md
src/data/: areawater.json  linearwater.json  precip.json.py  roads.json  wells.json.py
