[project]
name = "orange-county-well-status"
version = "0.1.0"
description = "Orange County Wells"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Dane Summers", email = "dsummersl@gmail.com" }
]
license = "Apache-2.0"
classifiers = ["Programming Language :: Python :: 3", "Typing :: Typed"]
dependencies = [
    "pandas>=3.0.4",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "radon>=6.0.1",
  "treepeat>=0.6.0",
  "vulture>=2.16",
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "build", "dist"]
lint.select = [
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort (automatically sorts and moves imports to top)
  "B",   # flake8-bugbear (find likely bugs and design problems in your program)
  "PLR", # Pylint Refactor (specifically catches misplaced imports)
  "PLC", # Pylint Convention (specifically catches imports not at the top of the file)
  "TID", # Tidy imports
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["PLR2004"] # Allow magic numbers in tests

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["wellstatus"]

[tool.pytest.ini_options]
addopts = "--cov=wellstatus  --cov-report=term-missing"
